Remove 3rd-party dependencies.